--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.jpa.database=MYSQL
-spring.datasource.url=jdbc:mysql://localhost/algamoney-api?createDatabaseIfNotExist=true&useSSL=false
-spring.datasource.data-username=root
-spring.datasource.data-password=root
+spring.datasource.url=jdbc:mysql://localhost/algamoneyapi?createDatabaseIfNotExist=true&useSSL=false
+spring.datasource.username=root
+spring.datasource.password=root
 
 spring.jpa.show-sql=true
