--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,6 @@ spring.datasource.password=root
 ##JPA##
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto= update
+
+##JACKSON##
+spring.jackson.deserialization.fail-on-unknown-properties=true
