--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -10,3 +10,6 @@ spring.jpa.hibernate.ddl-auto= update
 
 ##JACKSON##
 spring.jackson.deserialization.fail-on-unknown-properties=true
+
+
+spring.profiles.active= oauth-security
