--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,4 +12,4 @@ spring.jpa.hibernate.ddl-auto= update
 spring.jackson.deserialization.fail-on-unknown-properties=true
 
 
-spring.profiles.active= oauth-security
+spring.profiles.active= basic-security
